samples/_failures_safe/1761457019_f4ea12_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c50c3c2e.c: In function ‘token_type_name’:
./samples/SAFE/__tmp_c50c3c2e.c:170:39: error: missing terminating " character
  170 |         case TOKEN_IDENTIFIER: return "
      |                                       ^
./samples/SAFE/__tmp_c50c3c2e.c:170:9: error: expected expression at end of input
  170 |         case TOKEN_IDENTIFIER: return "
      |         ^~~~
./samples/SAFE/__tmp_c50c3c2e.c:170:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c50c3c2e.c:170:9: error: expected declaration or statement at end of input
